# projects

./: README.md
Assembly/: Makefile  README.md
Assembly/src/: memcpy.asm  memset.asm  strchr.asm  strcmp.asm  strlen.asm  strncmp.asm
C++/R-TYPE/: CMakeLists.txt  README.md  TCPProtocol.md  UDPProtocol.md  build.bat  build.sh  compile.sh  conanfile.txt  delete.sh
C++/R-TYPE/entities/: bullet.kyks  chase_bullet.kyks  chase_enemy.kyks  circle_bullet.kyks  enemy.kyks  explosion.kyks  obstacle.kyks  player.kyks  random_enemy.kyks  rotate_bullet.kyks  sinu_bullet.kyks  tele_bullet.kyks  tele_enemy.kyks
C++/R-TYPE/includes/: EntityType.hpp  Game.hpp  Menu.hpp  NewGame.hpp  RType.hpp  RectData.hpp  Settings.hpp
C++/R-TYPE/includes/Client/: Client.hpp  TCPClient.hpp
C++/R-TYPE/includes/Components/: AComponents.hpp  Health.hpp  Hitbox.hpp  IComponents.hpp  Position.hpp  Render.hpp  Spawning.hpp  Timer.hpp
C++/R-TYPE/includes/Core/: Core.hpp  CoreManager.hpp
C++/R-TYPE/includes/Entity/: Entity.hpp
C++/R-TYPE/includes/Server/: Server.hpp  TCPServer.hpp
C++/R-TYPE/includes/System/: HealthSystem.hpp  HitboxSystem.hpp  RenderSystem.hpp  SpawningSystem.hpp
C++/R-TYPE/includes/class/: NewGame.hpp
C++/R-TYPE/maps/: map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
C++/R-TYPE/scripts/: chase_bullet.cpp  chase_enemy.cpp  enemy.cpp  explosion.cpp  player.cpp  random_bullet.cpp  random_enemy.cpp  rotate_bullet.cpp  sinu_bullet.cpp  tele_bullet.cpp  tele_enemy.cpp
C++/R-TYPE/src/: EntityType.cpp  Game.cpp  Menu.cpp  RectData.cpp  Settings.cpp  editor.cpp  folder.cpp
C++/R-TYPE/src/Client/: Client.cpp  TCPClient.cpp  mainCli.cpp
C++/R-TYPE/src/Core/: Core.cpp  CoreManager.cpp
C++/R-TYPE/src/Entity/: Entity.cpp  NewGame.cpp
C++/R-TYPE/src/Server/: Server.cpp  TCPServer.cpp  mainServer.cpp
C++/Raytracer/: Makefile  README.md  config.cfg  out.ppm
C++/Raytracer/includes/: Point3D.hpp  RayTracer.hpp  Vector3D.hpp
C++/Raytracer/src/: Point3D.cpp  RayTracer.cpp  Sphere.cpp  Vector3D.cpp  main.cpp
C/DANTE-STAR/: Makefile  README.md
C/DANTE-STAR/generalfiles/: func_buffer.c  my_getnbr.c  my_putchar.c  my_putnbr.c  my_putstr.c  my_puttab.c  my_revstr.c  my_str_to_word_array.c  my_strcmp.c  my_strlen.c
C/DANTE-STAR/generator/: change_map.c  check_direction.c  creator.c  generator.c
C/DANTE-STAR/include/: my.h
C/DANTE-STAR/solver/: algorythm.c  direction.c  error.c  solver.c
C/Ftrace/: Makefile  README.md
C/Ftrace/includes/: my.h  syscall.h
C/Ftrace/src/: ftrace.c  main.c  my_fork.c  my_ifs.c  my_puterror.c  symbol.c  symbol2.c  syscall.c
Haskell/: Makefile  Pushswap.hs  README.md
IA/Gomoku/: Makefile  README.md
IA/Gomoku/src/: example.cpp  pisqpipe.cpp
python/DobotSolver/: .gitignore  README.md
python/DobotSolver/dobot/: All_Number_Linux_ver.py  get_user_positions.py  print_digits.py
python/DobotSolver/playback_files/: dobotnumbereight.playback  dobotnumberfive.playback  dobotnumberfour.playback  dobotnumbernine.playback  dobotnumberone.playback  dobotnumberseven.playback  dobotnumbersix.playback  dobotnumberthree.playback  dobotnumbertwo.playback  dobotsquare.playback
python/DobotSolver/source/: draw_numbers.py  get_grid copy.py  get_grid.py  main.py  solve_grid.py
python/DobotSolver/sudokuSolver/: sudokuSolver.py
python/DobotSolver/vision/: get_grid.py
